# kroot

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  report.rs
cli/tests/: diagnose_cluster_cli.rs
cli/tests/fixtures/: cluster_context.json  cluster_report.golden.json  cluster_report.golden.sarif.json  cluster_report.golden.txt  diagnosis_report.golden.txt
crates/analyzers/: Cargo.toml
crates/analyzers/src/: lib.rs  registry.rs
crates/analyzers/src/analyzers/: crashloop.rs  failed_mount_pvc.rs  imagepull.rs  liveness_probe.rs  missing_configmap.rs  missing_secret.rs  mod.rs  oom.rs  (+5 more)
crates/analyzers/tests/: crashloop_test.rs  graph_chain_test.rs  infra_event_analyzers_test.rs  resource_analyzers_test.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: collector.rs  context_loader.rs  events.rs  ingresses.rs  lib.rs  network_policies.rs  nodes.rs  pods.rs  registry.rs  services.rs  storage.rs  workloads.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: builder.rs  lib.rs  model.rs
crates/types/: Cargo.toml
crates/types/src/: analysis_context.rs  analysis_context_builder.rs  container_state.rs  deployment_state.rs  diagnosis.rs  event_state.rs  ingress_state.rs  lib.rs  network_policy_state.rs  node_state.rs  persistent_volume_claim_state.rs  persistent_volume_state.rs  pod_state.rs  replica_set_state.rs  service_state.rs
(+1 files in other folders)
