[package]
name = "kdocter"
version = "0.1.0"
edition = "2024"

[dependencies]
analyzers = { path = "../crates/analyzers" }
clap = { version = "4.5.60", features = ["derive"] }
cluster = { path = "../crates/cluster" }
colored = "3.1.1"
engine = { path = "../crates/engine" }
kube = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20.0"
tokio = { version = "1.50.0", features = ["full"] }
types = { path = "../crates/types" }

[dev-dependencies]
assert_cmd = "2.0"
